--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\shared\_Layout.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
@@ -16,6 +20,7 @@
 
   <ItemGroup>
     <None Include="Views\Home\index.cshtml" />
+    <None Include="Views\shared\_Layout.cshtml" />
   </ItemGroup>
 
 </Project>
