--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Remove="Views\shared\_Layout.cshtml" />
+    <Content Remove="Views\Shared\Components\MonthlySpecials\Default.cshtml" />
+    <Content Remove="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,7 +28,8 @@
 
   <ItemGroup>
     <None Include="Views\Home\index.cshtml" />
-    <None Include="Views\shared\_Layout.cshtml" />
+    <None Include="Views\Shared\Components\MonthlySpecials\Default.cshtml" />
+    <None Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
 
 </Project>
