--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Content Remove="Views\Shared\Components\MonthlySpecials\Default.cshtml" />
     <Content Remove="Views\Shared\_Layout.cshtml" />
+    <Content Remove="Views\_ViewStart.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +31,7 @@
     <None Include="Views\Home\index.cshtml" />
     <None Include="Views\Shared\Components\MonthlySpecials\Default.cshtml" />
     <None Include="Views\Shared\_Layout.cshtml" />
+    <None Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
 
 </Project>
