Use identity Services to allow uaser to log in to your site

--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/ExploreCailfornia.csproj
@@ -28,7 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Views\Home\index.cshtml" />
+    <None Include="Views\Account\Register.cshtml" />
+    <None Include="Views\Home\Index.cshtml" />
     <None Include="Views\Shared\Components\MonthlySpecials\Default.cshtml" />
     <None Include="Views\Shared\_Layout.cshtml" />
     <None Include="Views\_ViewStart.cshtml" />
